lab1/Test/L1-A-10-3.output
Error Type A at Line 2
Error Type A at Line 4
Error Type B at Line 6
Error Type B at Line 7
Error Type A at Line 11
Error Type B at Line 15
Error Type A at Line 22
Error Type B at Line 25
Error Type A at Line 30
