lab1/Test/L1-A-10-3.cmm
float ;
struct fmHy ^tlfjcF6Y3d2E2c 
;
struct CNzylZBFq1uqH64 ${
}YG95eUl ( ) {
  int amGd0 = ZwDTSD , SpbwQ [ 1063902637 == ] ;
  if + ( KsWQK )   return A8AYYmGcXzn2lqp ;
else   if ( _w = QWDGgHmS && UbJmJLyaqLU_2 != yQCWn7EZELn7yc 
    * - ! tRGxMT0PAWaWYDMe8K ( y79Dhs , oc8bx0ywKBlBItsw 
    || jtkj3PA >= wZ414WBIC - qr24vuK / Xq7bzVb64BQTu8 
    [ '( G4_v1oYXm1 = qYsDkSExh < s8337DQaFJ5J / ! s0OU3h 
    [ HdwPc == meE <= 1382244708.425681091 ] + ! ! YmmcaLLQl 
    ) > ! qzjQEvd0DvV4Sv ( ) ] . wXwhqhxFSu2STb ) + ! 
    720079239 ) {
=   }

}
struct {
  int OvxxZWi ;
};
int iIZt ( int VHo ) {
`  L2c1GbX4bBr ;
}
int ;
int sqUvb_LRWXJX2FfKcnqe ( && int PP_c9vk5IvSDz7A 
  , int lyt ) {
  TAd8u9N2LK ;
  FpgLx ;
  if ( H7pGv9ys0v8oM0b0E2 )   gDK ;
else   while ( WtuZu1_vrMsUE7 $)   tIlzQQpGzzKqja 
    ;


}
int XFTyjGtBwZFSAr0h , SB9HuJ5 

;
